<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_n_queens"
        android:icon="@drawable/ic_chess_black_24dp"
        android:title="@string/title_n_queens" />

    <item
        android:id="@+id/navigation_queens"
        android:icon="@drawable/ic_crown_black_24dp"
        android:title="@string/title_queens" />

    <item
        android:id="@+id/navigation_killer_sudoku"
        android:icon="@drawable/ic_skull_black_24dp"
        android:title="@string/title_killer_sudoku" />

</menu>