...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.KillerSudoku"
    tools:context=".ui.home.killerSudokuHome.KillerSudokuHomeFragment">

    <Button
        android:id="@+id/startKillerSudokuButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resumeKillerSudokuButton"
...
