...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Queens"
    tools:context=".ui.home.queensHome.QueensHomeFragment">

    <Button
        android:id="@+id/startQueensButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resumeQueensButton"
...
